♻️ refactor: ProjectDetailList 컴포넌트 다국어 지원 및 구조 개선 - 다국어 텍스트 처리를 위한 useLocalizedText 훅 추가 - description 다국어 로직 구현 및 UI 구조 개선 - 일본어 텍스트를 위한 break-words 스타일 적용 - 멀티라인 텍스트 렌더링 로직 추가 - 이미지 alt 텍스트 다국어 지원 - 코드 가독성과 유지보수성 향상

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -109,7 +109,8 @@
     "loading": "Loading Project",
     "loadingDescription": "Fetching project information.",
     "notFound": "Project Not Found",
-    "error": "An Error Occurred"
+    "error": "An Error Occurred",
+    "memberCount": "{{count}} people"
   },
   "education": {
     "title": "Education",
