--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -54,7 +54,7 @@
     "role": "Hyunsoo Ro",
     "name": "a frontend developer.",
     "description": "",
-    "about": "I enjoy frontend development that considers user experience\nand code reusability, and I love improving inefficient processes.\nI strive to become a better developer through continuous learning and growth.",
+    "about": "I enjoy frontend development that considers user experience and code reusability, and I love improving inefficient processes. I strive to become a better developer through continuous learning and growth.",
     "actions": {
       "downloadResume": "Download CV",
       "visitGithub": "Visit GitHub"
