--- a/src/i18n/locales/ja/translation.json
+++ b/src/i18n/locales/ja/translation.json
@@ -53,7 +53,7 @@
     "role": "フロントエンド 開発者",
     "name": "ノ・ヒョンス",
     "description": "です.",
-    "about": "ユーザーエクスペリエンスとコードの再利用性を考慮した\nフロントエンド開発を行い、非効率的なプロセスを改善することが好きです。\n継続的な学習と成長を通じて、より良い開発者になりたいと思っています。",
+    "about": "ユーザーエクスペリエンスとコードの再利用性を考慮したフロントエンド開発を行い、非効率的なプロセスを改善することが好きです。継続的な学習と成長を通じて、より良い開発者になりたいと思っています。",
     "actions": {
       "downloadResume": "履歴書ダウンロード",
       "visitGithub": "GitHub訪問"
