--- a/src/i18n/locales/ko/translation.json
+++ b/src/i18n/locales/ko/translation.json
@@ -53,7 +53,7 @@
     "role": "프론트엔드 개발자",
     "name": "노현수",
     "description": "입니다.",
-    "about": "사용자 경험과 코드 재사용성을 고려한 프론트엔드 개발을 하며\n 비효율적인 프로세스를 개선하는 것을 좋아합니다.\n지속적인 학습과 성장을 통해 더 나은 개발자가 되고자 합니다.",
+    "about": "사용자 경험과 코드 재사용성을 고려한 프론트엔드 개발을 하며 비효율적인 프로세스를 개선하는 것을 좋아합니다. 지속적인 학습과 성장을 통해 더 나은 개발자가 되고자 합니다.",
     "actions": {
       "downloadResume": "이력서 다운로드",
       "visitGithub": "GitHub 방문하기"
