💄 style: 인트로 섹션 반응형 레이아웃 및 텍스트 개선 - xs 브레이크포인트에서 줄바꿈 제어 (xs:whitespace-pre-line) - 소개 문구 최대 너비 조정 (max-w-3xl → max-w-2xl) - 불필요한 언어별 조건부 레이아웃 로직 제거 - 한글 소개 문구에 명시적 줄바꿈 추가로 가독성 향상 - 영문 소개 문구 간결화 및 자연스러운 표현으로 개선

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -54,7 +54,7 @@
     "role": "Hyunsoo Ro",
     "name": "a frontend developer.",
     "description": "",
-    "about": "I enjoy frontend development that considers user experience and code reusability, and I love improving inefficient processes. I strive to become a better developer through continuous learning and growth.",
+    "about": "I build user-focused frontend with reusable code, and I'm passionate about streamlining inefficient workflows. I'm committed to continuous learning and growth.",
     "actions": {
       "downloadResume": "Download CV",
       "visitGithub": "Visit GitHub"
