--- a/src/i18n/locales/ja/translation.json
+++ b/src/i18n/locales/ja/translation.json
@@ -148,7 +148,7 @@
       "placeholder": {
         "name": "山田太郎",
         "email": "example@gmail.com",
-        "message": "メッセージを入力してください。"
+        "message": "メッセージを入力してください"
       },
       "validation": {
         "name": {
@@ -188,12 +188,12 @@
       "submittingButton": "投稿中...",
       "validation": {
         "name": {
-          "required": "お名前を入力してください。",
-          "max": "お名前は10文字以内で入力してください。"
+          "required": "お名前を入力してください",
+          "max": "お名前は10文字以内で入力してください"
         },
         "message": {
-          "required": "メッセージを入力してください。",
-          "max": "メッセージは1000文字以内で入力してください。"
+          "required": "メッセージを入力してください",
+          "max": "メッセージは1000文字以内で入力してください"
         }
       }
     },
